Commit object oriented style command table

--- a/Project1/makefile
+++ b/Project1/makefile
@@ -1,3 +1,7 @@
+# Heavily Influenced by below for automatically indexing/adding .c and .h files
+# https://hiltmon.com/blog/2013/07/03/a-simple-c-plus-plus-project-structure/
+#
+
 CC := gcc
 CFLAGS := -Wall
 SRCPATH := src
