added testing makefile+script functionality. Need to figure out how to echo commands to stdout to make output make sense

--- a/Project1/makefile
+++ b/Project1/makefile
@@ -26,4 +26,5 @@ $(BUILDPATH)/%.o:$(SRCPATH)/%.$(SRCEXT)
 clean:
 	$(RM) -r $(BUILDPATH) $(TARGET)
 
-#add automatic test compilation and execution here later
+test: $(TARGET)
+	bash testing_script
